# qt-player

./: .gitignore  CMakeLists.txt  LICENSE  README.md  hoverdelegate.cpp  hoverdelegate.h  mainwindow.cpp  mainwindow.h  videoplayer.cpp  videoplayer.h
.github/workflows/: claude.yaml
